@@ -266,7 +266,7 @@ class Report(ProblemReport):
         # catch directly executed scripts
         if name != os.path.basename(self['ExecutablePath']):
             argvexes = filter(lambda p: os.access(p, os.R_OK), [p+cmdargs[0] for p in bindirs])
-            if argvexes and os.path.basename(cmdargs[0]) == name:
+            if argvexes and os.path.basename(os.path.realpath(argvexes[0])) == name:
                 self['InterpreterPath'] = self['ExecutablePath']
                 self['ExecutablePath'] = argvexes[0]
                 return
@@ -641,6 +641,20 @@ class _ApportReportTest(unittest.TestCase):
         self.assert_(not pr.has_key('InterpreterPath'))
         self.assertTrue('/bin/cat' in pr['ProcMaps'])
         self.assertTrue('[stack]' in pr['ProcMaps'])
+
+        # check correct handling of executable symlinks
+        assert os.path.islink('/bin/sh'), '/bin/sh needs to be a symlink for this test'
+        p = subprocess.Popen(['sh'], stdin=subprocess.PIPE,
+            close_fds=True)
+        assert p.pid
+        # wait until /proc/pid/cmdline exists
+        while not open('/proc/%i/cmdline' % p.pid).read():
+            time.sleep(0.1)
+        pr = Report()
+        pr.add_proc_info(pid=p.pid)
+        p.communicate('exit\n')
+        self.failIf(pr.has_key('InterpreterPath'), pr.get('InterpreterPath'))
+        self.assertEqual(pr['ExecutablePath'], os.path.realpath('/bin/sh'))
 
         # check correct handling of interpreted executables: shell
         p = subprocess.Popen(['/bin/zgrep', 'foo'], stdin=subprocess.PIPE,
